# ENCE464_Embeded_RTOS

docs/fitness-monitor-v2/: task_interactions.drawio
tests/: CMakeLists.txt  test_adc.c  test_adc_hal.c  test_circular_buffer.c  test_speed_tracker.c
tests/mocks/: circBufT_mock.h  speed_tracker_mock.h
tests/mocks/tiva_mocks/: adc_mock.h  sysctl_mock.h
